--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 05:05:02 2018</p>
+         Last Run: Fri Nov 30 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -36,7 +36,7 @@
                         <td>24</td>
                         <td>76</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
                         <td>99</td>
                      </tr>
@@ -57,11 +57,11 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>75</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>NNE</td>
+                        <td>N</td>
                         <td>99</td>
                      </tr>
                   </tbody>
@@ -162,7 +162,7 @@
                "data":[
                  "24",
                  "39",
-                 "43"
+                 "44"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 05:05:02 2018</p>
+         Last Run: Fri Nov 30 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>52</td>
+                        <td>57</td>
                         <td>79</td>
                         <td>0</td>
                         <td>14</td>
@@ -258,10 +258,10 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-5</td>
-                        <td>-10</td>
-                        <td>48</td>
-                        <td>75</td>
+                        <td>-4</td>
+                        <td>-9</td>
+                        <td>52</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -272,7 +272,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>32</td>
+                        <td>38</td>
                         <td>72</td>
                         <td>0</td>
                         <td>14</td>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-10",
-                 "-10",
+                 "-9",
                  "-9"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-4",
                  "-4"
                ]
              }
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "57",
                  "52",
-                 "48",
-                 "32"
+                 "38"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "75",
+                 "76",
                  "72"
                ]
              },
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 05:05:02 2018</p>
+         Last Run: Fri Nov 30 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,24 +463,24 @@
                         <td>Partly Cloudy</td>
                         <td>-9</td>
                         <td>-13</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>80</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-9</td>
                         <td>-13</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>25</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>15</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "6",
+                 "7",
+                 "7",
                  "6"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "25",
-                 "15"
+                 "52",
+                 "32",
+                 "20"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 05:05:02 2018</p>
+         Last Run: Fri Nov 30 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,37 +677,37 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-13</td>
-                        <td>-18</td>
-                        <td>5</td>
-                        <td>75</td>
+                        <td>-19</td>
+                        <td>6</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
-                        <td>11</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-20</td>
-                        <td>5</td>
-                        <td>77</td>
+                        <td>6</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>11</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-15</td>
                         <td>-20</td>
-                        <td>5</td>
-                        <td>81</td>
+                        <td>6</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-18",
+                 "-19",
                  "-20",
                  "-20"
                ]
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "6",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
                  "77",
-                 "81"
+                 "78",
+                 "82"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "11",
-                 "10"
+                 "20",
+                 "22",
+                 "25"
                ]
              }
            ]
