--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 06:05:06 2018</p>
+         Last Run: Fri Nov 30 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -45,7 +45,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>73</td>
                         <td>0</td>
                         <td>11</td>
@@ -57,7 +57,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>44</td>
+                        <td>46</td>
                         <td>75</td>
                         <td>0</td>
                         <td>11</td>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "39",
-                 "44"
+                 "40",
+                 "46"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 06:05:06 2018</p>
+         Last Run: Fri Nov 30 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>57</td>
-                        <td>79</td>
+                        <td>56</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -258,10 +258,10 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-4</td>
-                        <td>-9</td>
+                        <td>-5</td>
+                        <td>-10</td>
                         <td>52</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -273,7 +273,7 @@
                         <td>-4</td>
                         <td>-9</td>
                         <td>38</td>
-                        <td>72</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-10",
-                 "-9",
+                 "-10",
                  "-9"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-4",
+                 "-5",
                  "-4"
                ]
              }
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "57",
+                 "56",
                  "52",
                  "38"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "76",
-                 "72"
+                 "78",
+                 "75",
+                 "71"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 06:05:06 2018</p>
+         Last Run: Fri Nov 30 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -476,7 +476,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>7</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "79",
+                 "78",
                  "80"
                ]
              },
@@ -614,7 +614,7 @@
                "data":[
                  "52",
                  "32",
-                 "20"
+                 "21"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 06:05:06 2018</p>
+         Last Run: Fri Nov 30 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,37 +677,37 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-13</td>
+                        <td>-18</td>
+                        <td>6</td>
+                        <td>75</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>17</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-13</td>
                         <td>-19</td>
                         <td>6</td>
                         <td>77</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WNW</td>
+                        <td>WSW</td>
                         <td>20</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-14</td>
-                        <td>-20</td>
-                        <td>6</td>
-                        <td>78</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>22</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
-                        <td>6</td>
-                        <td>82</td>
+                        <td>-14</td>
+                        <td>-19</td>
+                        <td>5</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>25</td>
+                        <td>WSW</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-18",
                  "-19",
-                 "-20",
-                 "-20"
+                 "-19"
                ]
              },
              {
@@ -747,8 +747,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-13",
-                 "-14",
-                 "-15"
+                 "-13",
+                 "-14"
                ]
              }
            ]
@@ -807,7 +807,7 @@
                "data":[
                  "6",
                  "6",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "75",
                  "77",
-                 "78",
-                 "82"
+                 "81"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "17",
                  "20",
-                 "22",
-                 "25"
+                 "23"
                ]
              }
            ]
