--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 08:05:02 2018</p>
+         Last Run: Fri Nov 30 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -30,11 +30,11 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>31</td>
-                        <td>76</td>
+                        <td>24</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -44,23 +44,23 @@
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
-                        <td>-7</td>
-                        <td>40</td>
+                        <td>-8</td>
+                        <td>43</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>N</td>
-                        <td>99</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
-                        <td>-7</td>
-                        <td>45</td>
-                        <td>75</td>
+                        <td>-8</td>
+                        <td>49</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>N</td>
                         <td>100</td>
                      </tr>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-7",
-                 "-7"
+                 "-8",
+                 "-8"
                ]
              },
              {
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "31",
-                 "40",
-                 "45"
+                 "24",
+                 "43",
+                 "49"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
+                 "77",
                  "73",
-                 "75"
+                 "76"
                ]
              },
              {
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "99",
-                 "99",
+                 "100",
                  "100"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 08:05:02 2018</p>
+         Last Run: Fri Nov 30 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,31 +253,31 @@
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>98</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-5</td>
-                        <td>-10</td>
+                        <td>-4</td>
+                        <td>-9</td>
                         <td>52</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>98</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>71</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>98</td>
+                        <td>96</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-10",
-                 "-10",
+                 "-9",
                  "-9"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-4",
                  "-4"
                ]
              }
@@ -377,7 +377,7 @@
                "data":[
                  "56",
                  "52",
-                 "38"
+                 "39"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "75",
+                 "74",
                  "71"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "98",
-                 "98",
-                 "98"
+                 "96",
+                 "96",
+                 "96"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 08:05:02 2018</p>
+         Last Run: Fri Nov 30 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -466,21 +466,21 @@
                         <td>7</td>
                         <td>80</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>52</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>7</td>
                         <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>32</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-13",
-                 "-13",
+                 "-14",
                  "-14"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-9",
-                 "-9",
+                 "-10",
                  "-10"
                ]
              }
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "32",
-                 "21"
+                 "49",
+                 "30",
+                 "20"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 08:05:02 2018</p>
+         Last Run: Fri Nov 30 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,13 +677,13 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-13</td>
-                        <td>-18</td>
+                        <td>-19</td>
                         <td>6</td>
                         <td>75</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -695,7 +695,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>23</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-18",
+                 "-19",
                  "-19",
                  "-19"
                ]
@@ -818,7 +818,7 @@
                "data":[
                  "75",
                  "77",
-                 "81"
+                 "80"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "20",
-                 "23"
+                 "16",
+                 "19",
+                 "22"
                ]
              }
            ]
