--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 10:05:02 2018</p>
+         Last Run: Fri Nov 30 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -30,35 +30,35 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>40</td>
                         <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
-                        <td>99</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>43</td>
-                        <td>73</td>
+                        <td>49</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
-                        <td>99</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>49</td>
-                        <td>76</td>
+                        <td>54</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "43",
-                 "49"
+                 "40",
+                 "49",
+                 "54"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "73",
-                 "76"
+                 "74",
+                 "77"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "99",
-                 "99",
+                 "100",
+                 "100",
                  "100"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 10:05:02 2018</p>
+         Last Run: Fri Nov 30 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -247,23 +247,23 @@
                         <td>12:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-5</td>
-                        <td>-11</td>
+                        <td>-10</td>
                         <td>56</td>
                         <td>78</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
-                        <td>-10</td>
+                        <td>-9</td>
                         <td>52</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNW</td>
                         <td>96</td>
                      </tr>
@@ -271,11 +271,11 @@
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
-                        <td>-10</td>
+                        <td>-9</td>
                         <td>39</td>
                         <td>71</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNW</td>
                         <td>96</td>
                      </tr>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-11",
                  "-10",
-                 "-10"
+                 "-9",
+                 "-9"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "74",
+                 "75",
                  "71"
                ]
              },
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
+                 "95",
                  "96",
                  "96"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 10:05:02 2018</p>
+         Last Run: Fri Nov 30 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -473,14 +473,14 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>7</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>32</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-13",
-                 "-14",
+                 "-13",
                  "-14"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-9",
-                 "-10",
+                 "-9",
                  "-10"
                ]
              }
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "79",
+                 "80",
+                 "78",
                  "80"
                ]
              },
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "51",
-                 "32",
-                 "21"
+                 "31",
+                 "20"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 10:05:02 2018</p>
+         Last Run: Fri Nov 30 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,25 +677,25 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-13</td>
+                        <td>-18</td>
+                        <td>6</td>
+                        <td>75</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>17</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-13</td>
                         <td>-19</td>
                         <td>6</td>
                         <td>76</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>16</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-14</td>
-                        <td>-20</td>
-                        <td>6</td>
-                        <td>78</td>
-                        <td>0</td>
-                        <td>10</td>
                         <td>WSW</td>
-                        <td>19</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,7 +703,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-18",
                  "-19",
-                 "-20",
                  "-19"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-13",
-                 "-14",
+                 "-13",
                  "-14"
                ]
              }
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "75",
                  "76",
-                 "78",
-                 "81"
+                 "80"
                ]
              },
              {
@@ -827,8 +827,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "19",
+                 "17",
+                 "20",
                  "22"
                ]
              }
