--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 11:05:02 2018</p>
+         Last Run: Fri Nov 30 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>77</td>
                         <td>0</td>
                         <td>11</td>
@@ -43,9 +43,9 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>49</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>48</td>
                         <td>74</td>
                         <td>0</td>
                         <td>13</td>
@@ -58,7 +58,7 @@
                         <td>-3</td>
                         <td>-8</td>
                         <td>54</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-6",
+                 "-8",
                  "-8"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-2",
+                 "-3",
                  "-3"
                ]
              }
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "40",
-                 "49",
+                 "39",
+                 "48",
                  "54"
                ]
              },
@@ -173,7 +173,7 @@
                "data":[
                  "77",
                  "74",
-                 "77"
+                 "76"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 11:05:02 2018</p>
+         Last Run: Fri Nov 30 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>56</td>
-                        <td>78</td>
+                        <td>47</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -260,20 +260,20 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>52</td>
-                        <td>75</td>
+                        <td>42</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>39</td>
-                        <td>71</td>
+                        <td>24</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "56",
-                 "52",
-                 "39"
+                 "47",
+                 "42",
+                 "24"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "75",
-                 "71"
+                 "79",
+                 "76",
+                 "73"
                ]
              },
              {
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "95",
-                 "96",
+                 "95",
                  "96"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 11:05:02 2018</p>
+         Last Run: Fri Nov 30 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,19 +464,19 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>7</td>
-                        <td>80</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>W</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>7</td>
-                        <td>78</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -488,11 +488,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-13",
-                 "-13",
+                 "-14",
                  "-14"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-9",
-                 "-9",
+                 "-10",
                  "-10"
                ]
              }
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "82",
                  "80",
-                 "78",
-                 "80"
+                 "81"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
+                 "50",
                  "31",
-                 "20"
+                 "21"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 11:05:02 2018</p>
+         Last Run: Fri Nov 30 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,24 +678,24 @@
                         <td>Clear</td>
                         <td>-13</td>
                         <td>-18</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-13</td>
                         <td>-19</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>20</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -706,8 +706,8 @@
                         <td>80</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>22</td>
+                        <td>SW</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "6",
+                 "5",
+                 "5",
                  "5"
                ]
              },
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "20",
-                 "22"
+                 "9",
+                 "9",
+                 "10"
                ]
              }
            ]
