--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 12:05:03 2018</p>
+         Last Run: Fri Nov 30 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 12:05:03 2018</p>
+         Last Run: Fri Nov 30 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -247,11 +247,11 @@
                         <td>12:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-5</td>
-                        <td>-10</td>
+                        <td>-11</td>
                         <td>47</td>
                         <td>79</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNW</td>
                         <td>95</td>
                      </tr>
@@ -259,13 +259,13 @@
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
-                        <td>-9</td>
+                        <td>-10</td>
                         <td>42</td>
                         <td>76</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNW</td>
-                        <td>95</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-4</td>
                         <td>-9</td>
                         <td>24</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,8 +304,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-11",
                  "-10",
-                 "-9",
                  "-9"
                ]
              },
@@ -388,7 +388,7 @@
                "data":[
                  "79",
                  "76",
-                 "73"
+                 "72"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "95",
-                 "95",
-                 "96"
+                 "96",
+                 "97"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 12:05:03 2018</p>
+         Last Run: Fri Nov 30 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,14 +461,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>7</td>
-                        <td>82</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>50</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>31</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,10 +488,10 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>21</td>
                      </tr>
                   </tbody>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-13",
+                 "-14",
                  "-14",
                  "-14"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-9",
+                 "-10",
                  "-10",
                  "-10"
                ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "80",
-                 "81"
+                 "83",
+                 "81",
+                 "82"
                ]
              },
              {
@@ -612,8 +612,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "31",
+                 "52",
+                 "32",
                  "21"
                ]
              }
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 12:05:03 2018</p>
+         Last Run: Fri Nov 30 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,21 +679,21 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-13</td>
+                        <td>-14</td>
                         <td>-19</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>9</td>
                      </tr>
@@ -703,10 +703,10 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>10</td>
                      </tr>
                   </tbody>
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-13",
-                 "-13",
+                 "-14",
                  "-14"
                ]
              }
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "76",
-                 "80"
+                 "79",
+                 "80",
+                 "84"
                ]
              },
              {
